<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".NumsAndBasicFuncs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="00dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="@string/del"
            android:textAllCaps="false"
            android:textColor="@color/darkGray"
            android:textSize="40dp" />

        <Button
            android:id="@+id/pi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pi"
            android:textAllCaps="false"
            android:textColor="@color/darkGray"
            android:textSize="40dp" />

        <Button
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/e"
            android:textAllCaps="false"
            android:textColor="@color/darkGray"
            android:textSize="40dp" />

        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/div"
            android:textColor="@color/orange"
            android:textSize="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/one"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/one"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/two"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/two"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/three"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/three"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/mult"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/mult"
            android:textSize="40dp"
            android:textColor="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/four"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/four"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/five"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/five"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/six"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/six"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/minus"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/minus"
            android:textSize="40dp"
            android:textColor="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/seven"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/seven"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/eight"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/eight"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/nine"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/nine"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/plus"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/plus"
            android:textSize="40dp"
            android:textColor="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <Button
            android:id="@+id/point"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:text="@string/point"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/zero"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:text="@string/zero"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/pm"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:text="@string/pm"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/equal"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:text="@string/equal"
            android:textSize="40dp"
            android:textColor="@color/orange"/>

    </LinearLayout>



</LinearLayout>